log
Wed 24 Apr 2024 08:36:09 PM UTC: 
 hashmap.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:51:5: error: expected expression before ‘}’ token
   51 |     }
      |     ^
Compilation failed
3d64eb3
Wed 24 Apr 2024 08:36:41 PM UTC: 
 hashmap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|6
total_score: 0/70
f6b85f8
Wed 24 Apr 2024 08:40:32 PM UTC: 
 hashmap.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:71:3: error: ‘mapa’ undeclared (first use in this function); did you mean ‘map’?
   71 |   mapa->buckets = (Pair **)calloc(capacity,sizeof(Pair *));
      |   ^~~~
      |   map
hashmap.c:71:3: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
53aaff4
Wed 24 Apr 2024 08:43:50 PM UTC: 
 hashmap.c | 7 ++-----
 1 file changed, 2 insertions(+), 5 deletions(-)
 tests:  5|4
total_score: 30/70
b7838c7
Wed 24 Apr 2024 08:53:05 PM UTC: 
 hashmap.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
 tests:  8|3
total_score: 40/70
7cf4201
Wed 24 Apr 2024 08:57:29 PM UTC: 
 hashmap.c | 12 +++++++-----
 1 file changed, 7 insertions(+), 5 deletions(-)
 tests:  8|3
total_score: 40/70
764a53b
Wed 24 Apr 2024 09:02:23 PM UTC: 
 hashmap.c | 29 ++++++++++++++++++++++++++++-
 1 file changed, 28 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘enlarge’:
hashmap.c:65:3: error: unknown type name ‘hashElemen’
   65 |   hashElemen **old_array = map->hashArray;
      |   ^~~~~~~~~~
hashmap.c:65:31: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘hashArray’
   65 |   hashElemen **old_array = map->hashArray;
      |                               ^~
hashmap.c:66:3: error: ‘antiguaCapacidad’ undeclared (first use in this function)
   66 |   antiguaCapacidad = map->capacity;
      |   ^~~~~~~~~~~~~~~~
hashmap.c:66:3: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:68:3: error: ‘nuevaCapacidad’ undeclared (first use in this function)
   68 |   nuevaCapacidad = map->capacity * 2;
      |   ^~~~~~~~~~~~~~
hashmap.c:71:6: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘hashArray’
   71 |   map->hashArray = calloc(nuevaCapacidad, sizeof(hashElemen*));
      |      ^~
hashmap.c:71:50: error: ‘hashElemen’ undeclared (first use in this function)
   71 |   map->hashArray = calloc(nuevaCapacidad, sizeof(hashElemen*));
      |                                                  ^~~~~~~~~~
hashmap.c:71:61: error: expected expression before ‘)’ token
   71 |   map->hashArray = calloc(nuevaCapacidad, sizeof(hashElemen*));
      |                                                             ^
hashmap.c:77:9: error: implicit declaration of function ‘insert’; did you mean ‘insertMap’? [-Werror=implicit-function-declaration]
   77 |         insert(map, old_array[i]->key, old_array[i]->data);
      |         ^~~~~~
      |         insertMap
hashmap.c:77:33: error: request for member ‘key’ in something not a structure or union
   77 |         insert(map, old_array[i]->key, old_array[i]->data);
      |                                 ^~
hashmap.c:77:52: error: request for member ‘data’ in something not a structure or union
   77 |         insert(map, old_array[i]->key, old_array[i]->data);
      |                                                    ^~
hashmap.c:78:14: error: ‘oldArray’ undeclared (first use in this function); did you mean ‘old_array’?
   78 |         free(oldArray[i]);
      |              ^~~~~~~~
      |              old_array
cc1: all warnings being treated as errors
Compilation failed
be2a5b4
Wed 24 Apr 2024 09:04:55 PM UTC: 
 hashmap.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘enlarge’:
hashmap.c:65:25: error: initialization of ‘HashMap **’ {aka ‘struct HashMap **’} from incompatible pointer type ‘Pair **’ [-Werror=incompatible-pointer-types]
   65 |   HashMap **old_array = map->buckets;
      |                         ^~~
hashmap.c:71:48: error: ‘hashMap’ undeclared (first use in this function); did you mean ‘HashMap’?
   71 |   map->buckets = calloc(nuevaCapacidad, sizeof(hashMap*));
      |                                                ^~~~~~~
      |                                                HashMap
hashmap.c:71:48: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:71:56: error: expected expression before ‘)’ token
   71 |   map->buckets = calloc(nuevaCapacidad, sizeof(hashMap*));
      |                                                        ^
hashmap.c:77:9: error: implicit declaration of function ‘insert’; did you mean ‘insertMap’? [-Werror=implicit-function-declaration]
   77 |         insert(map, old_array[i]->key, old_array[i]->data);
      |         ^~~~~~
      |         insertMap
hashmap.c:77:33: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘key’
   77 |         insert(map, old_array[i]->key, old_array[i]->data);
      |                                 ^~
hashmap.c:77:52: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘data’
   77 |         insert(map, old_array[i]->key, old_array[i]->data);
      |                                                    ^~
hashmap.c:78:14: error: ‘oldArray’ undeclared (first use in this function); did you mean ‘old_array’?
   78 |         free(oldArray[i]);
      |              ^~~~~~~~
      |              old_array
cc1: all warnings being treated as errors
Compilation failed
2e40e24
